--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div id="pre-loader">
-        <img src="assets/images/pre-loader.gif" id="pre-loader" class="img-responsive">
+        <img src="assets/images/pre-loader.gif" alt="Pre-Loader" class="img-responsive">
     </div>
     <div id="load">
         <div class="container-fluid">
@@ -31,7 +31,7 @@
             <div class="bar-2"></div>
             <div class="bar-3"></div>
         </div>
-        <img src="assets/images/brand.png" class="img-responsive brand" />
+        <img src="assets/images/brand.png" alt="Brand" class="img-responsive brand" />
         </div>
     <div class="overlay" id="over">
         <ul>
@@ -58,21 +58,21 @@
     <div class="row">
         <div class="col-sm-4">
             <div class="hov">
-                <img src="assets/images/gallery-1.jpeg" />
+                <img src="assets/images/gallery-1.jpeg" alt="gallery-1" />
                 <div class="image-overlay">
                 </div>
             </div>
         </div>
         <div class="col-sm-4">
                 <div class="hov">
-                        <img src="assets/images/gallery-2.jpeg" />
+                        <img src="assets/images/gallery-2.jpeg" alt="gallery-2" />
                         <div class="image-overlay">
                         </div>
                     </div>
             </div>
             <div class="col-sm-4">
                     <div class="hov">
-                            <img src="assets/images/gallery-3.jpeg" />
+                            <img src="assets/images/gallery-3.jpeg" alt="gallery-3" />
                             <div class="image-overlay">
                             </div>
                         </div>
@@ -81,21 +81,21 @@
     <div class="row">
             <div class="col-sm-4">
                     <div class="hov">
-                            <img src="assets/images/gallery-4.jpeg" />
+                            <img src="assets/images/gallery-4.jpeg" alt="gallery-4" />
                             <div class="image-overlay">
                             </div>
                         </div>
             </div>
             <div class="col-sm-4">
                     <div class="hov">
-                            <img src="assets/images/gallery-5.jpeg" />
+                            <img src="assets/images/gallery-5.jpeg" alt="gallery-5" />
                             <div class="image-overlay">
                             </div>
                         </div>
                 </div>
                 <div class="col-sm-4">
                         <div class="hov">
-                                <img src="assets/images/gallery-6.jpeg" />
+                                <img src="assets/images/gallery-6.jpeg" alt="gallery-6" />
                                 <div class="image-overlay">
                                 </div>
                             </div>
