--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
             <audio data-key="83" src="assets/sounds/hihat.wav"></audio>
             <audio data-key="68" src="assets/sounds/kick.wav"></audio>
             <audio data-key="70" src="assets/sounds/openhat.wav"></audio>
-            <audio data-key="71" src="assets/sounds/BOOM.wav"></audio>
-            <audio data-key="72" src="assets/sounds/RIDE.wav"></audio>
-            <audio data-key="74" src="assets/sounds/SNARE.wav"></audio>
-            <audio data-key="75" src="assets/sounds/TOM.wav"></audio>
-            <audio data-key="76" src="assets/sounds/TINK.wav"></audio>
+            <audio data-key="71" src="assets/sounds/boom.wav"></audio>
+            <audio data-key="72" src="assets/sounds/ride.wav"></audio>
+            <audio data-key="74" src="assets/sounds/snare.wav"></audio>
+            <audio data-key="75" src="assets/sounds/tom.wav"></audio>
+            <audio data-key="76" src="assets/sounds/tink.wav"></audio>
             <p>Hit the keys to play the sound(Only for laptops and PCs).</p>
 </div>
 <footer>
